# tenferro-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
docs/design/: tenferro_design.md  tenferro_einsum_internal_design.md
docs/plans/: 2026-02-13-api-skeleton-design.md  2026-02-13-api-skeleton-impl.md  2026-02-13-design-doc-alignment-design.md  2026-02-13-design-doc-alignment.md
tenferro-algebra/: Cargo.toml
tenferro-algebra/src/: lib.rs
tenferro-device/: Cargo.toml
tenferro-device/src/: lib.rs
tenferro-einsum/: Cargo.toml
tenferro-einsum/src/: lib.rs
tenferro-prims/: Cargo.toml
tenferro-prims/src/: lib.rs
tenferro-tensor/: Cargo.toml
tenferro-tensor/src/: lib.rs
tenferro-tensorops/: Cargo.toml
tenferro-tensorops/src/: lib.rs
