[package]
name = "tenferro-einsum"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-level einsum with N-ary contraction tree optimization for the tenferro workspace."
publish = false

[dependencies]
tenferro-device = { path = "../tenferro-device" }
tenferro-prims = { path = "../tenferro-prims" }
tenferro-tensor = { path = "../tenferro-tensor" }
strided-traits = { git = "https://github.com/tensor4all/strided-rs" }
